--- a/single_graph.ipynb
+++ b/single_graph.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/09/03 13:51:09 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "spark = SparkSession.builder \\\n",
     "        .master(\"spark://master:7077\")\\\n",
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +98,8 @@
     "    pos_mass_matrix = np.hstack([pos, mass_raw.reshape(dim, 1)])\n",
     "\n",
     "    return pos_mass_matrix\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# plot a graph in 3D space\n",
@@ -130,6 +142,10 @@
     "    plt.show()\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# Graph object\n",
     "class graph:\n",
     "\n",
@@ -152,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,13 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "24/09/03 13:51:11 WARN TaskSetManager: Stage 0 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
       "                                                                                \r"
      ]
     }
@@ -238,9 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:12 WARN TaskSetManager: Stage 1 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -252,7 +277,7 @@
        "       dtype=float32)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,9 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:13 WARN TaskSetManager: Stage 2 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -274,7 +307,7 @@
        " np.float32(541840320000000.0)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,9 +318,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:14 WARN TaskSetManager: Stage 3 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -296,7 +337,7 @@
        " array([0.98808074, 0.95635426, 0.2773033 ], dtype=float32)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,9 +348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:15 WARN TaskSetManager: Stage 4 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -318,7 +366,7 @@
        " (array([0.98808074, 0.95635426, 0.2773033 ], dtype=float32), 2)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,9 +377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:15 WARN TaskSetManager: Stage 5 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -350,7 +405,7 @@
        "  (array([0.98808074, 0.95635426, 0.2773033 ], dtype=float32), 2))]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,9 +416,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:16 WARN TaskSetManager: Stage 6 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -372,7 +441,7 @@
        " (0, 2, array([0.21282285, 0.8085048 , 0.18358839], dtype=float32))]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,9 +452,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:17 WARN TaskSetManager: Stage 7 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -394,7 +471,7 @@
        " (0, 2, np.float32(0.85596627))]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,9 +482,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:18 WARN TaskSetManager: Stage 8 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -416,7 +501,7 @@
        " (0, 24, np.float32(0.12099926))]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,16 +512,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:18 WARN TaskSetManager: Stage 9 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[(0, 0), (0, 22), (0, 24)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,16 +540,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:20 WARN TaskSetManager: Stage 10 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[np.float32(0.0), np.float32(0.13359493), np.float32(0.12099926)]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,13 +567,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "24/09/03 13:51:21 WARN TaskSetManager: Stage 11 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
       "                                                                                \r"
      ]
     }
@@ -485,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +595,7 @@
        "(6734, 2)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,9 +653,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:23 WARN TaskSetManager: Stage 12 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n"
+     ]
+    }
+   ],
    "source": [
     "# filter linked positions\n",
     "pos_rdd_filtered = cartesian_rdd.filter(lambda x: [x[0][1], x[1][1]] in pairs_array.tolist())\n",
@@ -567,17 +676,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:51:23 WARN TaskSetManager: Stage 13 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[((0, array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32)),\n",
-       "  (0, array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32)))]"
+       "[((array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0),\n",
+       "  (array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0))]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,24 +705,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dist_centr(pos_filtered):\n",
-    "    d = pos_filtered[1] - halo_centroid\n",
+    "    d = pos_filtered - halo_centroid\n",
     "    \n",
     "    return d / np.linalg.norm(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# distance between each pair element wrt halos centroid (normalized)\n",
-    "d_row_col = pos_rdd_filtered.map(lambda x: (dist_centr(x[0]), dist_centr(x[1])))\n",
+    "d_row_col = pos_rdd_filtered.map(lambda x: (x[0], dist_centr(x[1][0]), dist_centr(x[1][1])))\n",
     "\n",
     "#d_row = pos_rdd_filtered.map(lambda x: x[0][1])\\\n",
     "#                        .map(lambda x: x - halo_centroid)\\\n",
@@ -629,27 +746,38 @@
     "distances_rdd_norm = distances_rdd.map(lambda x: x/0.2)\n",
     "\n",
     "# get edge attributes\n",
-    "cosines_rdd = cos1.zip(cos2)\n",
-    "edge_feat_rdd = cosines_rdd.zip(distances_rdd_norm).map(lambda x: [x[0][0], x[0][1], x[1]])"
+    "#cosines_rdd = cos1.zip(cos2)\n",
+    "#edge_feat_rdd = cosines_rdd.zip(distances_rdd_norm).map(lambda x: [x[0][0], x[0][1], x[1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/09/03 13:53:27 WARN TaskSetManager: Stage 17 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[(array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32),\n",
-       "  array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32)),\n",
-       " (array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32),\n",
-       "  array([ 0.6576473 , -0.7316947 , -0.17922884], dtype=float32)),\n",
-       " (array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32),\n",
-       "  array([ 0.59177375, -0.77649134,  0.21648344], dtype=float32))]"
+       "[((array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0),\n",
+       "  array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32),\n",
+       "  array([-0.5735617, -0.5927078, -0.5654417], dtype=float32)),\n",
+       " ((array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0),\n",
+       "  array([ 0.6576473 , -0.7316947 , -0.17922884], dtype=float32),\n",
+       "  array([0.57743365, 0.57699895, 0.577618  ], dtype=float32)),\n",
+       " ((array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0),\n",
+       "  array([ 0.59177375, -0.77649134,  0.21648344], dtype=float32),\n",
+       "  array([0.57742655, 0.5770289 , 0.57759523], dtype=float32))]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
