--- a/test_box.ipynb
+++ b/test_box.ipynb
@@ -25,7 +25,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/09/03 16:30:16 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/09/06 07:42:39 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -157,9 +157,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([7.7525789e-01, 1.4784946e-01, 4.6089169e-01, 7.2134815e+14],\n",
+       "       dtype=float32),\n",
+       " array([6.1568999e-01, 3.9869353e-01, 7.9261804e-01, 5.5314266e+14],\n",
+       "       dtype=float32),\n",
+       " array([9.8808074e-01, 9.5635426e-01, 2.7730331e-01, 5.4184032e+14],\n",
+       "       dtype=float32)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# simulations parameter\n",
     "sim_pars_file = np.loadtxt(\"/mnt/cosmo_GNN/latin_hypercube_params.txt\", dtype=float)\n",
@@ -174,12 +190,13 @@
     "\n",
     "# parallelize and filter by mass\n",
     "pos_mass_rdd = sc.parallelize(pos_mass_array)\\\n",
-    "                 .filter(lambda el: el[3] >= cut)"
+    "                 .filter(lambda el: el[3] >= cut)\n",
+    "pos_mass_rdd.take(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,49 +205,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mass_rdd = pos_mass_rdd.map(lambda x: x[3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# positions rddc\n",
-    "pos_rdd = pos_mass_rdd.map(lambda el: el[:3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/09/03 16:30:18 WARN TaskSetManager: Stage 0 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "                                                                                \r"
-     ]
+     "data": {
+      "text/plain": [
+       "[np.float32(721348150000000.0),\n",
+       " np.float32(553142660000000.0),\n",
+       " np.float32(541840320000000.0)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mass_rdd = pos_mass_rdd.map(lambda x: x[3])\n",
+    "mass_rdd.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32),\n",
+       " array([0.61569   , 0.39869353, 0.79261804], dtype=float32),\n",
+       " array([0.98808074, 0.95635426, 0.2773033 ], dtype=float32)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# positions rddc\n",
+    "pos_rdd = pos_mass_rdd.map(lambda el: el[:3])\n",
+    "pos_rdd.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0),\n",
+       " (array([0.61569   , 0.39869353, 0.79261804], dtype=float32), 1),\n",
+       " (array([0.98808074, 0.95635426, 0.2773033 ], dtype=float32), 2)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# indexed position rdd\n",
-    "idx_pos_rdd = pos_rdd.zipWithIndex()"
+    "idx_pos_rdd = pos_rdd.zipWithIndex()\n",
+    "idx_pos_rdd.take(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('box5', (array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0)),\n",
+       " ('box6', (array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0))]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "idx_pos_box_rdd = idx_pos_rdd.flatMap(lambda p: assign_box(p, boxes))"
+    "idx_pos_box_rdd = idx_pos_rdd.flatMap(lambda p: assign_box(p, boxes))\n",
+    "idx_pos_box_rdd.take(2)"
    ]
   },
   {
@@ -254,29 +317,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('box5', <pyspark.resultiterable.ResultIterable at 0x7f7a7e23ff20>),\n",
+       " ('box6', <pyspark.resultiterable.ResultIterable at 0x7f7a81828980>),\n",
+       " ('box7', <pyspark.resultiterable.ResultIterable at 0x7f7a7e037320>)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "diff_rdd = cartesian_rdd.map(lambda x:(x[0][0],(x[0][1][1], x[1][1][1], np.abs(x[0][1][0] - x[1][1][0]))))\n"
+    "grouped_rdd.take(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(('box5', (array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0)),\n",
+       "  ('box5', (array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0))),\n",
+       " (('box5', (array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0)),\n",
+       "  ('box5', (array([0.41980904, 0.43165922, 0.04384769], dtype=float32), 14))),\n",
+       " (('box5', (array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32), 0)),\n",
+       "  ('box5', (array([0.5094313 , 0.14071   , 0.12580945], dtype=float32), 15)))]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pairs_dist_rdd = diff_rdd.mapValues(lambda x: (x[0], x[1], np.linalg.norm(x[2])))"
+    "cartesian_rdd.take(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('box5', (0, 0, array([0., 0., 0.], dtype=float32))),\n",
+       " ('box5', (0, 14, array([0.35544884, 0.28380978, 0.417044  ], dtype=float32))),\n",
+       " ('box5', (0, 15, array([0.26582658, 0.00713946, 0.33508223], dtype=float32)))]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "linked_pairs_dist_rdd = pairs_dist_rdd.filter(lambda x: x[1][2] <= 0.2)"
+    "diff_rdd = cartesian_rdd.map(lambda x:(x[0][0],(x[0][1][1], x[1][1][1], np.abs(x[0][1][0] - x[1][1][0]))))\n",
+    "diff_rdd.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('box5', (0, 0, np.float32(0.0))),\n",
+       " ('box5', (0, 14, np.float32(0.6171042))),\n",
+       " ('box5', (0, 15, np.float32(0.42777896)))]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pairs_dist_rdd = diff_rdd.mapValues(lambda x: (x[0], x[1], np.linalg.norm(x[2])))\n",
+    "pairs_dist_rdd.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('box5', (0, 0, np.float32(0.0))),\n",
+       " ('box5', (0, 22, np.float32(0.13359493))),\n",
+       " ('box5', (0, 24, np.float32(0.12099926)))]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linked_pairs_dist_rdd = pairs_dist_rdd.filter(lambda x: x[1][2] <= 0.2)\n",
+    "linked_pairs_dist_rdd.take(3)"
    ]
   },
   {
@@ -291,19 +443,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/09/03 16:30:24 WARN TaskSetManager: Stage 1 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "24/09/03 16:30:27 WARN TaskSetManager: Stage 6 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "24/09/03 16:30:27 WARN TaskSetManager: Stage 7 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('box5', (0, 0)), ('box5', (0, 22)), ('box5', (0, 24))]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "pairs_rdd.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('box5', np.float32(0.0)),\n",
+       " ('box5', np.float32(0.13359493)),\n",
+       " ('box5', np.float32(0.12099926))]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distances_rdd.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pairs_array = np.array(pairs_rdd.map(lambda x: x[1]).distinct().collect())\n",
     "distances_array = distances_rdd.map(lambda x: x[1]).collect()\n",
@@ -353,9 +537,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 863,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msc\u001b[49m\u001b[38;5;241m.\u001b[39mstop()\n\u001b[1;32m      2\u001b[0m spark\u001b[38;5;241m.\u001b[39mstop()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sc' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sc.stop()\n",
     "spark.stop()"
